# Rock5B-RKNN-Traffic-Sign-Recognition

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: config.py  export_rknn.py  image-recognition-test.py  recognition.py  thermal_monitor.py  yolo_dataset_test.py  yolo_ver_comp_bridge.py
